# traffic-agent-api

./: .gitignore  Cargo.toml
migrations/2023-12-08-004019_create_users/: up.sql
migrations/2023-12-08-144717_create_traffic_tickets/: down.sql  up.sql
migrations/2023-12-08-154354_create_vehicles/: up.sql
migrations/2023-12-09-221348_create_drivers/: down.sql  up.sql
src/: main.rs  models.rs  routes.rs  services.rs
src/models/: driver.rs  schema.rs  traffic_ticket.rs  user.rs  vehicle.rs
src/repository/: database.rs  repository.rs
src/routes/: drivers.rs  traffic_ticket.rs  user.rs  vehicle.rs
src/services/: drivers.rs  traffic_ticket.rs  user.rs  vehicle.rs
